fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="taskSignificance">Task Significance:</label>
         <input type="number" id="taskSignificance" name="taskSignificance" min="0" max="7" required><br>
 
-        <label for="autonomy">AAutonomy:</label>
+        <label for="autonomy">Autonomy:</label>
         <input type="number" id="autonomy" name="autonomy" min="0" max="7" required><br>
 
         <label for="feedback">Feedback:</label>
